feat: implement schema migration for `OpenSearch` (#3347)